Replace deprecated Integer and Character constructors with valueOf()
Replace new Integer(int) with Integer.valueOf(int) and
new Character(char) with Character.valueOf(char) across test files.
These constructors have been deprecated since Java 9.

Co-Authored-By: rmillard07 <rmillard07@gmail.com>